[package]
name = "rust-addon"
version = "0.1.0"
authors = ["Albert Islamov <higashi166@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-bindgen = { version = "2.0.0-beta.1" }

[build-dependencies]
node-bindgen = { features = ["build"] }

[lib]
crate-type=["cdylib"]
